--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <a href="#" class="logo">
+          igroteka
+        </a>
+      </div>
+    </div>
+  </header>
 </body>
 </html>
