--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
         <a href="#" class="logo">
           igroteka
         </a>
+        <nav class="menu">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#" class="menu__link">Игры</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Разработчики</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Автор</a>
+          </li>
+        </ul>
+        </nav>
       </div>
     </div>
   </header>
