--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="header__inner">
         <a href="#" class="logo">
-          igroteka
+          Игротека
         </a>
         <nav class="menu">
         <ul class="menu__list">
