--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             </li>
           </ul>
         </nav>
+        <search role="search">
+          <form method="#" action="#">
+            <input type="search" name="search-text" />
+            <button>Найти</button>
+          </form>
+        </search>
       </div>
     </div>
   </header>
