--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         </nav>
         <search role="search">
           <form method="#" action="#">
-            <input type="search" name="search-text" />
-            <button>Найти</button>
+            <input placeholder="Введите название игры" type="search" name="search-text" />
           </form>
         </search>
       </div>
