add and center the atomic heart image

--- a/index.html
+++ b/index.html
@@ -38,5 +38,14 @@
       </div>
     </div>
   </header>
+  <main class="main">
+    <section class="games-slider">
+      <div class="container">
+        <div class="games-slider__covers">
+          <img class="games-slider__img" src="images/atomicheart.jpg" alt="atomic heart game cover">
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
