add some padding to search input in header

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
         <search role="search">
           <form method="#" action="#">
-            <input placeholder="Введите название игры" type="search" name="search-text" />
+            <input class="search-games" placeholder="Введите название игры" type="search" name="search-text" />
           </form>
         </search>
       </div>
