change the title of the home page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  <title>Igroteka</title>
+  <title>Магазин игр "Игротека"</title>
 </head>
 <body>
   <header class="header">
