download some logos for ticker, gonna finish it later

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         </div>
       </div>
     </section>
+    <section class="ticker-section">
+      <div class="logos">
+        <div class="logos__slide"></div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
