download, center and arrange game-studio logos

--- a/index.html
+++ b/index.html
@@ -55,8 +55,17 @@
       </div>
     </section>
     <section class="ticker-section">
+      <h2 class="ticker-statement">отечественные игровые студии</h2>
       <div class="logos">
-        <div class="logos__slide"></div>
+        <div class="logos__slide">
+          <img class="alawar" src="images/logos/alawar.png" alt="">
+          <img class="icepick" src="images/logos/icepicklodge.png" alt="">
+          <img class="inkstains" src="images/logos/inkstains.png" alt="">
+          <!-- <img class="nival" src="images/logos/nival.png" alt=""> -->
+          <img class="oovee" src="images/logos/oovee.png" alt="">
+          <img class="perelesoq" src="images/logos/perelesoq.png" alt="">
+          <img class="sovietgames" src="images/logos/sovietgames.png" alt="">
+        </div>
       </div>
     </section>
   </main>
