--- a/index.html
+++ b/index.html
@@ -61,16 +61,6 @@
           <img class="alawar" src="images/logos/alawar.png" alt="">
           <img class="icepick" src="images/logos/icepicklodge.png" alt="">
           <img class="inkstains" src="images/logos/inkstains.png" alt="">
-          <!-- <img class="nival" src="images/logos/nival.png" alt=""> -->
-          <img class="oovee" src="images/logos/oovee.png" alt="">
-          <img class="perelesoq" src="images/logos/perelesoq.png" alt="">
-          <img class="sovietgames" src="images/logos/sovietgames.png" alt="">
-        </div>
-        <div class="logos__slide">
-          <img class="alawar" src="images/logos/alawar.png" alt="">
-          <img class="icepick" src="images/logos/icepicklodge.png" alt="">
-          <img class="inkstains" src="images/logos/inkstains.png" alt="">
-          <!-- <img class="nival" src="images/logos/nival.png" alt=""> -->
           <img class="oovee" src="images/logos/oovee.png" alt="">
           <img class="perelesoq" src="images/logos/perelesoq.png" alt="">
           <img class="sovietgames" src="images/logos/sovietgames.png" alt="">
@@ -78,5 +68,6 @@
       </div>
     </section>
   </main>
+  <script src="js/main.js"></script>
 </body>
 </html>
