--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <img class="icepick" src="images/logos/icepicklodge.png" alt="">
           <img class="inkstains" src="images/logos/inkstains.png" alt="">
           <img class="oovee" src="images/logos/oovee.png" alt="">
-          <img class="perelesoq" src="images/logos/perelesoq.png" alt="">
+          <!-- <img class="perelesoq" src="images/logos/perelesoq.png" alt=""> -->
           <img class="sovietgames" src="images/logos/sovietgames.png" alt="">
         </div>
       </div>
