minimum styles for game-cards with prices etc

--- a/index.html
+++ b/index.html
@@ -67,6 +67,44 @@
         </div>
       </div>
     </section>
+    <section class="game-cards-section">
+      <div class="game-cards-section__inner">
+        <div class="container">
+          <div class="game-cards__heading">
+            <h2 class="game-cards__h2">поддержи <span class="nash-n">н</span><span class="nash-a">а</span><span class="nash-sh">ш</span> геймдев</h2>
+          </div>
+          <div class="game-cards">
+            <div class="game-card">
+              <div class="game-card__image">
+                <img class="game-card__cover" src="images/game-covers/atomicheart.jpg" alt="game cover">
+              </div>
+              <div class="game-card__info">
+                <p class="game-card__name">Atomic Heart</p>
+                <p class="game-card__price">Цена : <span class="game-card-price-number">9999</span> копеек</p>
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="game-card__image">
+                <img class="game-card__cover" src="images/game-covers/Pathologic2_ru.jpg" alt="game cover">
+              </div>
+              <div class="game-card__info">
+                <p class="game-card__name">Pathologic 2</p>
+                <p class="game-card__price">Цена : <span class="game-card-price-number">9999</span> копеек</p>
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="game-card__image">
+                <img class="game-card__cover" src="images/game-covers/spintires.jpg" alt="game cover">
+              </div>
+              <div class="game-card__info">
+                <p class="game-card__name">Mudrunner</p>
+                <p class="game-card__price">Цена : <span class="game-card-price-number">9999</span> копеек</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
