--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
               </div>
             </div>
           </div>
+          <div class="show-more">
+            <button class="show-more__button">показать ещё</button>
+          </div>
         </div>
       </div>
     </section>
