minimum css to footer, gonna finish all that later

--- a/index.html
+++ b/index.html
@@ -109,5 +109,8 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <p class="footer-text">Все права на логотипы, названия игр и т.д принадлежат их авторам, сайт ненастоящий и сделан чисто по приколу. Спасибо</p>
+  </footer>
 </body>
 </html>
