delete headers search-input

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             </li>
           </ul>
         </nav>
-        <search role="search">
+        <!-- <search role="search">
           <form method="#" action="#">
             <input class="search-games" placeholder="Введите название игры" type="search" name="search-text" />
           </form>
-        </search>
+        </search> -->
       </div>
     </div>
   </header>
