markup and style burger-menu in header

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             </li>
           </ul>
         </nav>
+        <div class="burger">
+          <span class="burger__btn"></span>
+          <span class="burger__btn"></span>
+          <span class="burger__btn"></span>
+        </div>
         <!-- <search role="search">
           <form method="#" action="#">
             <input class="search-games" placeholder="Введите название игры" type="search" name="search-text" />
