delete slider buttons, make slider img responsive

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
         <div class="games-slider__covers">
           <img class="games-slider__img" src="images/atomicheart.jpg" alt="atomic heart game cover">
         </div>
-        <div class="games-slider__buttons">
+        <!-- <div class="games-slider__buttons">
           <a class="games-slider__btn-left">
             <img class="arrow-icon" src="images/icons/left-arrow.svg" alt="">
           </a>
           <a class="games-slider__btn-right">
             <img class="arrow-icon" src="images/icons/right-arrow.svg" alt="">
           </a>
-        </div>
+        </div> -->
       </div>
     </section>
     <section class="ticker-section">
