--- a/index.html
+++ b/index.html
@@ -89,29 +89,29 @@
           <div class="game-cards">
             <div class="game-card">
               <div class="game-card__image">
-                <img class="game-card__cover" src="images/game-covers/atomicheart.jpg" alt="game cover">
+                <img class="game-card__cover" src="images/game-covers/lovemoneycover.jpg" alt="game cover">
               </div>
               <div class="game-card__info">
-                <p class="game-card__name">Atomic Heart</p>
-                <p class="game-card__price">Цена : <span class="game-card-price-number">9999</span> копеек</p>
+                <p class="game-card__name">Love, Money and Rock'n'Roll</p>
+                <p class="game-card__price">Цена : <span class="game-card-price-number">600</span> руб.</p>
               </div>
             </div>
             <div class="game-card">
               <div class="game-card__image">
-                <img class="game-card__cover" src="images/game-covers/capsule_616x353.jpg" alt="game cover">
+                <img class="game-card__cover" src="images/game-covers/deadsidecover.jpg" alt="game cover">
               </div>
               <div class="game-card__info">
-                <p class="game-card__name">Pathologic 2</p>
-                <p class="game-card__price">Цена : <span class="game-card-price-number">9999</span> копеек</p>
+                <p class="game-card__name">Deadside</p>
+                <p class="game-card__price">Цена : <span class="game-card-price-number">284</span> руб.</p>
               </div>
             </div>
             <div class="game-card">
               <div class="game-card__image">
-                <img class="game-card__cover" src="images/game-covers/spintires.jpg" alt="game cover">
+                <img class="game-card__cover" src="images/game-covers/indikacover.jpg" alt="game cover">
               </div>
               <div class="game-card__info">
-                <p class="game-card__name">Mudrunner</p>
-                <p class="game-card__price">Цена : <span class="game-card-price-number">9999</span> копеек</p>
+                <p class="game-card__name">Indika</p>
+                <p class="game-card__price">Цена : <span class="game-card-price-number">1000</span> руб.</p>
               </div>
             </div>
           </div>
