--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
           <img class="perelesoq" src="images/logos/perelesoq.png" alt="">
           <img class="sovietgames" src="images/logos/sovietgames.png" alt="">
         </div>
+        <div class="logos__slide">
+          <img class="alawar" src="images/logos/alawar.png" alt="">
+          <img class="icepick" src="images/logos/icepicklodge.png" alt="">
+          <img class="inkstains" src="images/logos/inkstains.png" alt="">
+          <img class="oovee" src="images/logos/oovee.png" alt="">
+          <img class="perelesoq" src="images/logos/perelesoq.png" alt="">
+          <img class="sovietgames" src="images/logos/sovietgames.png" alt="">
+        </div>
       </div>
     </section>
     <section class="game-cards-section">
