--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a href="#" class="menu__link">Разработчики</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Автор</a>
+              <a href="https://github.com/notaslakhan" class="menu__link" target="_blank">Автор</a>
             </li>
           </ul>
         </nav>
