--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="container">
       <div class="header__inner">
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
           Игро<span class="teka">тека</span>
         </a>
         <nav class="menu">
