link headers 'games' button to a games-cards section by id

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="#" class="menu__link">Игры</a>
+              <a href="#support-our-gamedev" class="menu__link">Игры</a>
             </li>
             <li class="menu__item">
               <a href="#" class="menu__link">Разработчики</a>
@@ -88,7 +88,7 @@
         </div>
       </div>
     </section>
-    <section class="game-cards-section">
+    <section id="support-our-gamedev" class="game-cards-section">
       <div class="game-cards-section__inner">
         <div class="game-cards__heading">
           <h2 class="game-cards__h2">поддержи <span class="nash-n">н</span><span class="nash-a">а</span><span class="nash-sh">ш</span> геймдев</h2>
