link headers developers button to a ticker section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a href="#support-our-gamedev" class="menu__link">Игры</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Разработчики</a>
+              <a href="#russian-devs" class="menu__link">Разработчики</a>
             </li>
             <li class="menu__item">
               <a href="https://github.com/notaslakhan" class="menu__link" target="_blank">Автор</a>
@@ -60,7 +60,7 @@
       </div>
     </section>
     <section class="ticker-section">
-      <h2 class="ticker-statement">отечественные игровые студии</h2>
+      <h2 id="russian-devs" class="ticker-statement">отечественные игровые студии</h2>
       <div class="logos">
         <div class="logos__slide">
           <img class="alawar" src="images/logos/alawar.png" alt="">
